--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
+  },
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.5.0"
   }
 }
